Archive2/25/f1d59d15afbd23/output
main.cpp: In instantiation of 'void f() [with T = double]':
main.cpp:23:15:   required from here
main.cpp:9:8: error: 'void MyClass<T>::PrivateFunction() [with T = int]' is private
   void PrivateFunction() { 
        ^
main.cpp:18:21: error: within this context
   a.PrivateFunction();
                     ^
